# examples

./: LICENSE  README.md
ansible-traefik/: Makefile  hosts.ini  main.yml
c-bsearch/: CMakeLists.txt  main.c
c-btree/: CMakeLists.txt  eprintf.h  main.c
c-extensible-array/: CMakeLists.txt  main.c
c-hashmap/: CMakeLists.txt  main.c
c-linked-lists/: CMakeLists.txt  eprintf.c  main.c
c-qsort/: CMakeLists.txt  main.c
cpp-bsearch/: CMakeLists.txt
cpp-qsort/: CMakeLists.txt  main.cpp
docker-compose-apache-php/: README.md  docker-compose.yml  mariadb.cnf
docker-compose-php70/: README.md  docker-compose.yml
docker-golang/: Dockerfile  Makefile
docker-nginx-consul/: Dockerfile  default.conf.ctmpl
go-benchmark/: README.md  main.go
go-cgo-php-extension/: .gitignore  Makefile  sum.zep  test.php
go-cgo-python-cdll/: Makefile  test.py
go-cgo-python-extension/: Makefile  pysum.c  setup.py  sum.go  test_pysum.py
go-cgo-shared-lib/: Makefile  main.c
go-code-generation/: Gopkg.toml  dictionary.go  gen-dictionary.go
go-consul/: README.md  goservice.go
go-exec-from-memory/: Makefile  go.mod  go.sum
go-http-echo-over-tcp/: README.md  main.go
go-http-echo-over-tcp-thread-pooled/: LICENSE  README.md  main.go
go-http-mirror/: README.md  main.go
go-http-pipe/: README.md  main.go  pipe.go
go-https-attack-proxy/: ca.crt  ca.key  go.mod  main.go
go-net-with-custom-codec/: go.mod
go-philosopher-dinner/: README.md  main.go
go-plus-scrypt-rust-c/src/rustscryptbindings/: Cargo.toml  Makefile
go-plus-scrypt-rust-c/src/rustscryptbindings/src/: lib.rs
(+150 files in other folders)
