[package]
name = "rustscryptbindings"
version = "0.1.0"
authors = ["Dmitriy Smotrov <d.smotrov@omprussia.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrypt = { version = "0.2", default-features = false }
libc = "0.2"

[lib]
crate-type = ["staticlib", "cdylib"]